src/test/ui/error-codes/E0558.stderr
error[E0558]: export_name attribute has invalid format
  --> $DIR/E0558.rs:11:1
   |
LL | #[export_name]
   | ^^^^^^^^^^^^^^ did you mean #[export_name="*"]?

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0558"
