src/test/ui/error-codes/E0558.rs
#[export_name]
//~^ ERROR E0558

pub fn something() {}

fn main() {}
